--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -75,7 +75,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -91,7 +91,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -107,7 +107,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -139,7 +139,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -155,7 +155,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -171,7 +171,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -187,7 +187,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card" >
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
@@ -203,7 +203,7 @@
                                         <div class="products-i">
                                             <a href="#" class="products-link mb-2">
                                                 <div class="card">
-                                                    <img class="card-img-top" src="../static/img/product_1.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
                                                     <div class="products-price-container">
                                                         <div class="products-price">
                                                             <span class="price-val">10 AZN</span>
