--- a/app/app/static/css/home_content.css
+++ b/app/app/static/css/home_content.css
@@ -12,7 +12,7 @@
     font-weight: 600;
     overflow: hidden;
     padding: 10px 0;
-    
+   
     border-top: 2px solid #e8e8e8;
     border-bottom: 1px solid #e8e8e8;
 }
@@ -31,8 +31,8 @@
     background: #f8f8f8;
     padding: 3px;
     border-radius: 4px;
+    margin-right: 5px;
 }
-
 .statistic-counters-quantity span {
     display: inline-block;
     color: #ff6e35;
@@ -46,20 +46,17 @@
     position: relative;
     overflow: hidden;
 }
-
 .statistic-counters-quantity span:first-child {
     border-radius: 4px 0 0 4px;
 }
-
 .statistic-counters-text {
-    margin-left: 10px;
+    margin: 0 20px 0 5px;
     color: #147eb8;
     font-size: 16px;
     line-height: 1.4;
     vertical-align: middle;
     display: inline-block;
 }
-
 .statistic-counters-quantity span:before {
     content: '';
     display: block;
@@ -70,7 +67,6 @@
     right: 0;
     bottom: 25px;
 }
-
 .statistic-counters-quantity span:last-child {
     border-radius: 0 4px 4px 0;
     border-right: 0;
@@ -95,18 +91,6 @@
     margin: 0;
 }
 
-.section-title_more {
-    display: inline-block;
-    margin-left: 15px;
-    color: #2289f8;
-    font-size: 16px;
-    float: right;
-    font-weight: bold;
-    text-transform: uppercase;
-    
-
-}
-
 .section-title a:hover{
     text-decoration: none;
 }
@@ -115,21 +99,19 @@
 .products-i{
     display: inline-block;
     vertical-align: top;
-    width: 15rem;
-    background-color: white;
+    width: 13rem;
     box-sizing: border-box;
-    margin-right: 0.2%;
+    margin-right: 0;
     margin-bottom: 6px;
 }
-
 .products .products-link{
     text-decoration: none;
 }
-
 .products .products-link .card{
     position: relative;
     z-index: 1;
-    height: 300px;
+    height: 200px;
+    width: 200px;
 }
 
 .products .products-link .card img{
@@ -151,13 +133,11 @@
     color: #fff;
     text-align: center ;
 }
-
 .products-price .price-val {
     font-weight: 600;
     font-size: 19px;
     line-height: 18px;
 }
-
 .products-name{
     display: -webkit-box;
     max-height: 38.4px;
@@ -173,7 +153,6 @@
     color: #444;
     font-weight: bold;
 }
-
 .card-text {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -181,10 +160,133 @@
     width: 100%;
     padding: 0px 10px;
     color: #b3b3b3;
-    font-size: 14px;
+    font-size: 12px;
     position: absolute;
     left: 7px;
     bottom: 8px;
     box-sizing: border-box;
 }
 
+@media only screen and (max-width:480px) and (min-width: 120px) {
+    .statistic-counters-text {
+        margin-left: 8px;
+        font-size: 12px;
+        text-align:center;
+        line-height: 1;
+    }
+    .statistic-counters-quantity span {
+        font-size: 14pt;
+        width: 20px;
+        height: 30px;
+        line-height: 25px;
+    }
+    .content-row{
+        padding: 0;
+    }
+
+    .statistic-counters-i {
+        width: 140px;
+    }
+    .section-title_name {
+        font-size: 12px;
+    }
+    .products-i {
+        display: inline-block;
+    }
+    .products .products-link .card{
+        height: 200px;
+        width: 200px;
+    }
+    .products-price .price-val {
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 16px;
+    }
+    .products .products-link .card .products-price-container {
+        width: 40%;
+    }
+    .products-name{
+        font-size: 14px;
+    }
+    .card-text {
+        font-size: 12px;
+    }
+}
+@media screen and (max-width: 767px) and (min-width: 480px) {
+    .statistic-counters-text {
+        margin-left: 8px;
+        font-size: 13px;
+        text-align: left;
+        line-height: 1;
+    }
+    .statistic-counters-quantity span {
+        font-size: 16pt;
+        width: 30px;
+        height: 40px;
+        line-height: 35px;
+    }
+    
+     .section-title_name {
+        font-size: 12px;
+    }
+    .products-i {
+        display: inline-block;
+    }
+    .products .products-link .card{
+        height: 200px;
+        width: 200px;
+    }
+    .products-price .price-val {
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 16px;
+    }
+    .products .products-link .card .products-price-container {
+        width: 40%;
+    }
+    .products-name{
+        font-size: 13px;
+    }
+    .card-text {
+        font-size: 12px;
+    }
+}
+@media  only screen and (max-width: 1198px) and  (min-width: 767px){
+    .statistic-counters-text {
+            margin-left: 8px;
+            font-size: 13px;
+            text-align:left;
+            line-height: 1;
+    }
+    .statistic-counters-quantity span {
+        font-size: 17pt;
+        width: 30px;
+        height: 40px;
+        line-height: 35px;
+    }
+    .section-title_name {
+        font-size: 15px;
+    }
+    .products-i {
+        display: inline-block;
+        margin-right:15px;
+    }
+    .products .products-link .card{
+        height: 220px;
+        width: 220px;
+    }
+    .products-price .price-val {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .products .products-link .card .products-price-container {
+        width: 40%;
+    }
+    .products-name{
+        font-size: 14px;
+    }
+    .card-text {
+        font-size: 13px;
+    }
+}
