--- a/app/app/static/css/home_content.css
+++ b/app/app/static/css/home_content.css
@@ -17,6 +17,7 @@
     border-bottom: 1px solid #e8e8e8;
 }
 .statistic-counters-container .l-center {
+    width: 100%;
     display: table;
 }
 
@@ -114,57 +115,75 @@
     width: 200px;
 }
 
-.products .products-link .card img{
-    overflow: hidden;
-    display: block;
-    background-color: #fff;
+.card .products-top{
+    height: 130px;
+    border-bottom: 1px solid #ddd;
+    position: relative;
+    z-index: 1;
 }
 
-.products .products-link .card .products-price-container{
-    width: 45%;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
+.card .card-img-top{
+    overflow: hidden;
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+.card .products-price-container{
+    position: absolute;
+        z-index: 1;
+        bottom: 0;
+        left: 0;
 }
 
 .products-price-container .products-price {
-    padding: 7px 10px;
+    padding: 0 5px 4px;
     background-color: #ff6617;
+    text-align: center;
     color: #fff;
-    text-align: center ;
 }
 .products-price .price-val {
     font-weight: 600;
-    font-size: 19px;
+    text-align: center;
+    color: #fff;
+    font-size: 17px;
     line-height: 18px;
 }
 .products-name{
+    margin: 0;
+    padding: 0;
+    display: block;
     display: -webkit-box;
-    max-height: 38.4px;
-    font-size: 18px;
+    max-height: 33.6px;
+    font-size: 15px;
     line-height: 1.2;
-    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    color: #000;
+    min-height: auto;
+    max-height: initial;
+    padding: 7px 5px 0;
+    margin-bottom: 7px;
+    border-top: 0;
+    line-height: 17px;
     box-sizing: border-box;
-    overflow: hidden;
-    min-height: 50px;
-    color: #444;
     font-weight: bold;
 }
-.card-text {
+.products-created{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 100%;
-    padding: 0px 10px;
-    color: #b3b3b3;
-    font-size: 12px;
     position: absolute;
-    left: 7px;
-    bottom: 8px;
-    box-sizing: border-box;
+    left: 0;
+    right: 0;
+    bottom: 7px;
+    padding: 2px 40px 0 5px;
+    color: #bcbcbc;
+    font-size: 13px;
+    line-height: 12px;
 }
 
 @media only screen and (max-width:480px) and (min-width: 120px) {
