--- a/app/templates/includes/base.html
+++ b/app/templates/includes/base.html
@@ -26,6 +26,7 @@
 </body>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/dropdown.js' %}"></script>
+    <script src="{% static 'js/ajax-form.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script>
       function addDarkmodeWidget() {
