--- a/app/templates/pages/user_profile.html
+++ b/app/templates/pages/user_profile.html
@@ -84,7 +84,7 @@
                                     </div>
                                 </div>
                                 <div class="products-name">{{ product.title }}</div>
-                                <div class="products-created">{{ product.city.name }}, bugün, 18:21</div>
+                                <div class="products-created">{{ product.city.name }}, {{ product.is_past_due }} {{ product.updated_at|date:"H:i" }} </div>
                             </div>
                         </a>
                      </div>
